--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-BOT_ID="fbeddd02f8d67cb9003f81e5f4"
+TOKEN="LjVEVHi4snhuWJETTrHdRN81JsOOH3mRXLahOO2a"
+GROUP="35140063"
+NAME="SquashBot"
+URL="https://squaeshbot.herokuapp.com"
+BOT_ID="2c9872e58ea5a9e8b2ebfbed5a"
