--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "squash-bot",
-  "version": "0.1.2",
-  "description": "A sample Node.js app using Express 4",
+  "name": "fancy-groupme-bot",
+  "version": "0.1.3",
+  "description": "Use the Groupme bot API",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "NODE_ENV=test ./node_modules/.bin/tap --stderr test/*.test.js"
   },
-  "dependencies": {
-    "cool-ascii-faces": "~1.3.x",
-    "director": "",
-    "fancy-groupme-bot": "^0.1.3"
-  },
-  "engines": {
-    "node": "0.10.x"
-  },
+  "author": "Chris McAvoy <chris.mcavoy@gmail.com>",
+  "license": "BSD",
   "repository": {
     "type": "git",
-    "url": "https://github.com/henryhwilson/squashbot"
+    "url": "https://github.com/cmcavoy/fancy-groupme-bot.git"
   },
   "keywords": [
-    "node",
-    "heroku",
-    "express"
+    "bot",
+    "groupme",
+    "fancy"
   ],
-  "license": "MIT"
+  "dependencies": {
+    "async": "~0.2.9",
+    "underscore": "~1.5.1",
+    "request": "~2.27.0",
+    "formidable": "~1.0.14"
+  },
+  "devDependencies": {
+    "nock": "~0.22.1",
+    "tap": "~0.4.4"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
+  }
 }
